Setting up the ability to return index.html for any unmatched path.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Chore Wheel</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
 
   </head>
   <body>
